--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">LevelUp</string>
     <string-array name="search_options">
-        <item>Nicknames</item>
+        <item>Nickname</item>
         <item>Game</item>
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
